cmake_minimum_required(VERSION 3.17)
project(DesignPatterns)

set(CMAKE_CXX_STANDARD 14)

add_executable(Facade Structural_Patterns/Facade Structural_Patterns/Facade/facade.cpp)
add_executable(Abstract_Factory Abstract_factory Creational_Patterns/Abstract_Factory/abstract_factory.cpp)
add_executable(Bridge Structural_Patterns/Bridge Structural_Patterns/Bridge/bridge.cpp)
add_executable(Builder Creational_Patterns/Builder Creational_Patterns/Builder/builder.cpp)
add_executable(Decorator Structural_Patterns/Decorator Structural_Patterns/Decorator/decorator.cpp)
add_executable(Singleton Creational_Patterns/Singleton Creational_Patterns/Singleton/singleton.cpp)
add_executable(Observer Behavioral_Patterns/Observer Behavioral_Patterns/Observer/observer.cpp)